hard-gists/a56d5446416f5ad2bbac/run.log
=== Docker Run Log for a56d5446416f5ad2bbac ===
Started at: Mi 29. Okt 18:56:04 CET 2025

[2025-10-29 18:56:04] START: Running container for a56d5446416f5ad2bbac
[2025-10-29 18:56:05] SUCCESS: Container 420c8ac2a42879b13ed8f22c331f3dc36fb9d0cd5abae98e41bbb57203d1403c started for a56d5446416f5ad2bbac
=== Container logs for a56d5446416f5ad2bbac ===
  File "/snippet.py", line 115
    print 'generating weights'
    ^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for a56d5446416f5ad2bbac ===
[2025-10-29 18:56:07] INFO: Container 420c8ac2a42879b13ed8f22c331f3dc36fb9d0cd5abae98e41bbb57203d1403c has stopped
